smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-with-invalid-byte-text-block-key.smithy
// Syntax error at line 2, column 2: Expected one of IDENTIFIER, STRING('"'); but found BYTE_TEXT_BLOCK('b"""\nfoo"""') | Model
$b"""
foo""": "1.0"
